--- a/about/index.html
+++ b/about/index.html
@@ -24,8 +24,43 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div>
+      <a href="#"><img src="" alt="unplugged logo"></a>
+      <div></div>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank" rel="noopener">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank" rel="noopener">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <!-- page specific content-->
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="contact">
+          <h4>Contact</h4>
+          <address>
+            <p>555-555-5555<br>
+            hello@unplugged.com</p>
+          </address>
+          <div>
+            <h4>Social</h4>
+            <p><a href="https://www.facebook.com/" target="_blank" rel="noopener">Facebook</a></p>
+            <p><a href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a></p>
+            <p><a href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a></p>
+          </div>
+        </div>
+      </div> <!-- footer content ends -->
+    </div> <!-- footer content-wrapper ends -->
+
+    <div class="copyright">
+      <p>Copyright 202X | Unplugged</p>
+    </div>
+  </footer>
+  
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
