--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -38,9 +38,17 @@
     </div>
   </header>
   <main>
-    <section>
+    <section class="hero-area">
+      <h1>Retreat from the desk, return refreshed</h1>
     </section>
     <aside>
+      <h3>Want to join the next retreat?</h3>
+      <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+      <div class="form">
+        <h3>Find out more</h3>
+        <input type="text" name="name" value="email address">
+        <input type="button" value="Download Itinerary">
+      </div>
     </aside>
   </main> <!-- main wrapper -->
   <footer>
