--- a/faq/index.html
+++ b/faq/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged Retreat | FAQ</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -26,17 +26,51 @@
 
   <header>
     <div>
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <a href="../index.html"><img src="" alt="unplugged logo"></a>
       <div></div>
       <nav>
         <ul>
-          <li><a href="faq/index.html" target="_blank" rel="noopener">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank" rel="noopener">About</a></li>
+          <li><a href="index.html" target="_blank" rel="noopener">FAQ</a></li>
+          <li><a href="../about/index.html" target="_blank" rel="noopener">About</a></li>
         </ul>
       </nav>
     </div>
   </header>
-  <!-- page specific content-->
+  
+  <main class="faq-section">
+      <div class="content-wrapper">
+        <h2>Frequently Asked Questions</h2>
+        <div class="faq-content">
+          <h4>How do I get to the Unplugged retreat?</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+             labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+          </p>
+        </div>
+        <div class="faq-content">
+          <h4>What kind of team is right for the Unplugged retreat?</h4>
+          <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+           labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+          </p>
+        </div>
+        <div clss="faq-content">
+          <h4>What size teams can you accommodate?</h4>
+          <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+           labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+          </p>
+        </div>
+        <div class="faq-content">
+          <h4>Is there really no wifi available?</h4>
+          <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+           labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+          </p>
+        </div>
+      </div>
+  </main> <!-- main content wrapper ends-->
+
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
