Added breakpoints and tablet styles

--- a/about/index.html
+++ b/about/index.html
@@ -25,9 +25,9 @@
 <body>
 
   <header>
-    <div>
+    <div class="content-wrapper">
       <a href="../index.html"><img src="" alt="unplugged logo"></a>
-      <div></div>
+      <div class="header-divider"></div>
       <nav>
         <ul>
           <li><a href="../faq/index.html" target="_blank" rel="noopener">FAQ</a></li>
