Added additional styles

--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@
       <nav>
         <ul>
           <li><a href="../faq/index.html" target="_blank" rel="noopener">FAQ</a></li>
-          <li><a href="#" target="_blank" rel="noopener">About</a></li>
+          <li><a href="#" target="_blank" rel="noopener">ABOUT</a></li>
         </ul>
       </nav>
     </div>
