--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <nav>
         <ul>
           <li><a href="faq/index.html" target="_blank" rel="noopener">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank" rel="noopener">About</a></li>
+          <li><a href="about/index.html" target="_blank" rel="noopener">ABOUT</a></li>
         </ul>
       </nav>
     </div>
@@ -70,6 +70,7 @@
     <section class="features">
       <div class="content-wrapper">
         <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+        <div class="features-items">
         <article>
           <p class="fontawesome-icon"></p>
           <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
@@ -96,6 +97,7 @@
           <p class="fontawesome-icon"></p>
           <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
         </article>
+        </div>
       </div>
     </section>
 
