--- a/faq/index.html
+++ b/faq/index.html
@@ -39,7 +39,7 @@
     </div>
   </header>
   
-  <main class="faq-section">
+  <main class="faq">
       <div class="content-wrapper">
         <h2>Frequently Asked Questions</h2>
         <div class="faq-content">
@@ -56,7 +56,7 @@
            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
           </p>
         </div>
-        <div clss="faq-content">
+        <div class="faq-content">
           <h4>What size teams can you accommodate?</h4>
           <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
