--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,11 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="../index.html"><img src="" alt="unplugged logo"></a>
+      <figure>
+        <a href="#">
+          <img src="../img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>  
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -94,11 +98,13 @@
             <p>555-555-5555<br>
             hello@unplugged.com</p>
           </address>
-          <div>
-            <h4>Social</h4>
-            <p><a href="https://www.facebook.com/" target="_blank" rel="noopener">Facebook</a></p>
-            <p><a href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a></p>
-            <p><a href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a></p>
+        </div>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+          <p><a href="https://www.facebook.com/" target="_blank" rel="noopener">Facebook</a></p>
+          <p><a href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a></p>
+          <p><a href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a></p>
           </div>
         </div>
       </div> <!-- footer content ends -->
