--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#">
-        <img src="" alt="unplugged logo">
-      </a>
+      <figure>
+        <a href="#">
+          <img src="img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>  
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -105,6 +107,11 @@
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like this one.</h2>
         <article>
+          <figure>
+          <a href="">
+            <img src="img/unplugged-retreat-lacrue.jpg" alt="Photo of a group">
+          </a>
+          </figure>
           <div>
             <h3>LaCrue Bottling Co. October 2018</h3>
             <p>
@@ -117,6 +124,7 @@
         </article>
       </div>
     </section>
+
   </main> <!-- main wrapper -->
 
   <footer>
@@ -128,13 +136,13 @@
             <p>555-555-5555<br>
             hello@unplugged.com</p>
           </address>
-          <div class="social">
-            <h4>Social</h4>
-            <div class="social-icons">
-            <p><a href="https://www.facebook.com/" target="_blank" rel="noopener">Facebook</a></p>
-            <p><a href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a></p>
-            <p><a href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a></p>
-            </div>
+        </div>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+          <p><a href="https://www.facebook.com/" target="_blank" rel="noopener">Facebook</a></p>
+          <p><a href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a></p>
+          <p><a href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a></p>
           </div>
         </div>
       </div> <!-- footer content ends -->
