--- a/faq/index.html
+++ b/faq/index.html
@@ -18,6 +18,8 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
+   <!-- Font Awesome -->
+   <script src="https://kit.fontawesome.com/c6b1403938.js" crossorigin="anonymous"></script>
 
   <meta name="theme-color" content="#fafafa">
   <!-- Google Fonts -->
