--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+   <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/c6b1403938.js" crossorigin="anonymous"></script>
 
   <meta name="theme-color" content="#fafafa">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
-  
 </head>
 
 <body>
@@ -74,29 +75,29 @@
         <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
         <div class="features-items">
         <article>
-          <p class="fontawesome-icon"></p>
+          <p class="fontawesome-icon"><i class="fas fa-campground"></i></p>
           <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
         </article>
         <article>
-          <p class="fontawesome-icon"></p>
+          <p class="fontawesome-icon"><i class="fas fa-bed"></i></p>
           <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, 
             and 4 breakout rooms.</p>
         </article>
         <article>
-          <p class="fontawesome-icon"></p>
+          <p class="fontawesome-icon"><i class="fas fa-utensils"></i></p>
           <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
         </article>
         <article>
-          <p class="fontawesome-icon"></p>
+          <p class="fontawesome-icon"><i class="fas fa-shoe-prints"></i></p>
           <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
         </article>
         <article>
-          <p class="fontawesome-icon"></p>
+          <p class="fontawesome-icon"><i class="fas fa-smile"></i></p>
           <p class="features-item-description">Retreat facilitator to manage your day to day activities
              so you all get a chance to reset.</p>
         </article>
         <article>
-          <p class="fontawesome-icon"></p>
+          <p class="fontawesome-icon"><i class="fas fa-wifi"></i></p>
           <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
         </article>
         </div>
@@ -149,7 +150,7 @@
     </div> <!-- footer content-wrapper ends -->
 
     <div class="copyright">
-      <p>Copyright 202X | Unplugged</p>
+      <p>Copyright 2023 | Unplugged</p>
     </div>
   </footer>
 
