--- a/about/index.html
+++ b/about/index.html
@@ -104,9 +104,9 @@
         <div class="social">
           <h4>Social</h4>
           <div class="social-icons">
-          <p><a href="https://www.facebook.com/" target="_blank" rel="noopener">Facebook</a></p>
-          <p><a href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a></p>
-          <p><a href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a></p>
+            <p><a href="https://www.facebook.com/" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a></p>
+            <p><a href="https://twitter.com/" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a></p>
+            <p><a href="https://www.instagram.com/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a></p>
           </div>
         </div>
       </div> <!-- footer content ends -->
