--- a/faq/index.html
+++ b/faq/index.html
@@ -31,7 +31,7 @@
   <header>
     <div class="content-wrapper">
       <figure>
-        <a href="#">
+        <a href="../index.html">
           <img src="../img/unpluggedlogo.png" alt="unplugged logo">
         </a>
       </figure>  
@@ -101,7 +101,7 @@
     </div> <!-- footer content-wrapper ends -->
 
     <div class="copyright">
-      <p>Copyright 202X | Unplugged</p>
+      <p>Copyright 2023 | Unplugged</p>
     </div>
   </footer>
   
