Removed 'target=_blank' from nav links

--- a/about/index.html
+++ b/about/index.html
@@ -38,8 +38,8 @@
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="../faq/index.html" target="_blank" rel="noopener">FAQ</a></li>
-          <li><a href="#" target="_blank" rel="noopener">ABOUT</a></li>
+          <li><a href="../faq/index.html" rel="noopener">FAQ</a></li>
+          <li><a href="#" rel="noopener">ABOUT</a></li>
         </ul>
       </nav>
     </div>
